[tool.black]
line-length = 100

[tool.isort]
profile = 'black'
skip_gitignore = false
line_length = 100
atomic = true
sections = ['FUTURE', 'STDLIB', 'THIRDPARTY', 'LOCALFOLDER', 'FIRSTPARTY']

[tool.poetry]
name = "cc-tools"
version = "0.1.0"
description = "Tools and scripts for automating various tedious Compute Canada annoyances."
authors = ["Derek M Berger <dmberger.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
